crates/swc_ecma_parser/tests/test262-error-references/fail/95682e688db64065.js.stderr
error: Invalid left-hand side in 'for...in' statement
 --> $DIR/tests/test262-parser/fail/95682e688db64065.js:1:6
  |
1 | for (this of that);
  |      ^^^^

